# breaking-news-agent

./: .deploy-config.local.example  .env.1password.tpl  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  vector.toml
.github/workflows/: deploy.yml  test.yml
docs/: ARCHITECTURE.md  CI_CD.md  SECRETS.md  SETUP.md
scripts/: backup.sh  bootstrap-vps.sh  deploy.sh  init_db.py  secrets-fetch.sh  send_daily_digest.py  setup-env.sh  update.sh
src/: __init__.py  config.py  db.py  main.py
src/adapters/: __init__.py  base.py  beehiiv.py  telegram.py  threads.py  x.py  youtube.py
src/analytics/: __init__.py  collector.py
src/ingesters/: __init__.py  base.py  newsapi.py  rss.py
src/pipeline/: __init__.py  dedup.py  filter.py  rewriter.py
src/publish/: __init__.py  guard.py
src/utils/: logger.py  rate_limit.py
tests/: test_adapter_contract.py  test_dedup.py  test_filter.py  test_publish_guard.py  test_rate_limit.py  test_rewriter_extract_json.py  test_telegram_scrub.py  test_voice_modes.py  test_x_url_strip.py
